# poetry

./: Cargo.toml  LICENSE  README.md
poetry/: Cargo.toml
poetry-data/: Cargo.toml
poetry-data/src/: lib.rs
poetry-file/: Cargo.toml
poetry-http/: Cargo.toml
poetry/src/: data.rs  lib.rs
src/: main.rs
