[package]
name = "poetry"
version = "0.1.0"
authors = ["metide <metide@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = { version = "0.8.0", default = false, features = ["std", "std_rng"] }