[package]
name = "poetry"
version = "0.1.0"
authors = ["metide <metide@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rand = { version = "0.8.0", features = ["std", "std_rng"] }

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'